# erasplit

./: .codecov.yml  .coveragerc  .gitignore  .mailmap  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  conftest.py  pyproject.toml  setup.cfg  setup.py
.github/: labeler-file-extensions.yml  labeler-module.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish_pypi.yml  twitter.yml  wheel.yml  wheels.yml
benchmarks/: bench_hist_gradient_boosting.py  bench_hist_gradient_boosting_adult.py  bench_hist_gradient_boosting_categorical_only.py  bench_hist_gradient_boosting_higgsboson.py  bench_hist_gradient_boosting_threading.py
build_tools/: generate_authors_table.py  linting.sh  shared.sh  update_environments_and_lock_files.py
build_tools/azure/: get_selected_tests.py  install.sh  posix-docker.yml  posix.yml  test_pytest_soft_dependency.sh  test_script.sh  windows.yml
build_tools/circle/: build_doc.sh  list_versions.py  push_doc.sh
build_tools/cirrus/: arm_wheel.yml  build_test_arm.sh
build_tools/github/: test_source.sh  test_windows_wheels.sh  vendor.py
build_tools/wheels/: build_wheels.sh  test_wheels.sh
erasplit/: __init__.py  _config.py  _min_dependencies.py
erasplit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
erasplit/__check_build/: __init__.py
erasplit/_build_utils/: __init__.py  openmp_helpers.py
erasplit/_loss/: __init__.py  _loss.pyx.tp
erasplit/_loss/tests/: test_link.py  test_loss.py
erasplit/ensemble/: __init__.py
erasplit/ensemble/_hist_gradient_boosting/: era_grower.py  era_splitting.pyx  gradient_boosting.py  splitting.pyx  utils.pyx
erasplit/ensemble/_hist_gradient_boosting/tests/: test_binning.py  test_bitset.py  test_compare_lightgbm.py  test_gradient_boosting.py  test_grower.py  test_histogram.py  test_monotonic_contraints.py  test_predictor.py  test_splitting.py  test_warm_start.py
maint_tools/: check_pxd_in_installation.py  sort_whats_new.py  whats_missing.sh
