[options]
packages = find:

[options.packages.find]
include = erasplit*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = erasplit
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes
    # Activate the plugin explicitly to ensure that the seed is reported
    # correctly on the CI when running `pytest --pyargs erasplit` from the
    # source folder.
    -p erasplit.tests.random_seed
    -rN

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning

[flake8]
# max line length for black
max-line-length = 88
target-version = ['py37']
# Default flake8 3.5 ignored flags
ignore=
    # check ignored by default in flake8. Meaning unclear.
    E24,
    # continuation line under-indented
    E121,
    # closing bracket does not match indentation
    E123,
    # continuation line over-indented for hanging indent
    E126,
    # space before : (needed for how black formats slicing)
    E203,
    # missing whitespace around arithmetic operator
    E226,
    # multiple statements on one line (def)
    E704,
    # do not assign a lambda expression, use a def
    E731,
    # do not use variables named 'l', 'O', or 'I'
    E741,
    # line break before binary operator
    W503,
    # line break after binary operator
    W504
exclude=
    .git,
    __pycache__,
    dist,
    erasplit/externals,
    doc/_build,
    doc/auto_examples,
    doc/tutorial,
    build,
    asv_benchmarks/env,
    asv_benchmarks/html,
    asv_benchmarks/results,
    asv_benchmarks/benchmarks/cache

# It's fine not to put the import at the top of the file in the examples
# folder.
per-file-ignores =
    examples/*: E402
    doc/conf.py: E402

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[check-manifest]
# ignore files missing in VCS
ignore =
    erasplit/_loss/_loss.pyx
    erasplit/linear_model/_sag_fast.pyx
    erasplit/utils/_seq_dataset.pyx
    erasplit/utils/_seq_dataset.pxd
    erasplit/utils/_weight_vector.pyx
    erasplit/utils/_weight_vector.pxd
    erasplit/metrics/_dist_metrics.pyx
    erasplit/metrics/_dist_metrics.pxd
    erasplit/metrics/_pairwise_distances_reduction/_argkmin.pxd
    erasplit/metrics/_pairwise_distances_reduction/_argkmin.pyx
    erasplit/metrics/_pairwise_distances_reduction/_base.pxd
    erasplit/metrics/_pairwise_distances_reduction/_base.pyx
    erasplit/metrics/_pairwise_distances_reduction/_datasets_pair.pxd
    erasplit/metrics/_pairwise_distances_reduction/_datasets_pair.pyx
    erasplit/metrics/_pairwise_distances_reduction/_middle_term_computer.pxd
    erasplit/metrics/_pairwise_distances_reduction/_middle_term_computer.pyx
    erasplit/metrics/_pairwise_distances_reduction/_radius_neighbors.pxd
    erasplit/metrics/_pairwise_distances_reduction/_radius_neighbors.pyx


[codespell]
skip = ./.git,./.mypy_cache,./doc/themes/scikit-learn-modern/static/js,./erasplit/feature_extraction/_stop_words.py,./doc/_build,./doc/auto_examples,./doc/modules/generated
ignore-words = build_tools/codespell_ignore_words.txt
